--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
+    "chai": "^4.3.8",
     "eslint": "^8.48.0",
     "mocha": "^10.2.0"
   }
